# Rag-Chatbot

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .vulture_whitelist.py  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Code_of_Conduct.md  Dockerfile  README.md  SECURITY.md  USER_MANUAL.md  app.py  cliff.toml  pyproject.toml  requirements.txt  test.py
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
agent skills/: README.md
agent skills/citation generation skill/: README.md
agent skills/document search skill/: README.md
agent skills/document summarization skill/: README.md
agent skills/keyword extraction skill/: README.md
agent skills/question answering skill/: README.md
data/: README.txt
specs/: rag-chatbot-feature.md
specs/rag-chatbot/: plan.md  spec.md  tasks.md
tests/: test_basic.py
utils/: chunk_stats_helper.py  embeddings.py  llm_provider.py  pdf_loader.py  rag_chain.py  text_splitter.py  vector_store.py
