[project]
name = "streamlit-rag-chatbot"
version = "0.1.0"
description = "A Streamlit RAG chatbot application"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Your Name", email = "your.email@example.com"}]

dependencies = [
    "streamlit==1.54.0",
    "langchain==0.3.27",
    "langchain-community==0.3.27",
    "langchain-huggingface==0.1.2",
    "langchain-ollama==0.3.3",
    "langchain-google-genai==2.1.4",
    "langchain-openai==0.3.16",
    "langchain-anthropic==0.3.12",
    "langchain-groq==0.2.5",
    "faiss-cpu==1.11.0",
    "sentence-transformers==4.1.0",
    "pymupdf4llm==0.0.17",
    "pymupdf==1.25.5",
    "python-dotenv==1.2.2",
    "pillow==12.2.0",
    "langsmith==0.8.18",
]

dev-dependencies = [
    "mypy>=1.10.0",
    "ruff>=0.6.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.bandit]
exclude_dirs = ["tests"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pip-audit>=2.10.1",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.18",
]
